display none<>inline for FrontEnd

--- a/views/index.html
+++ b/views/index.html
@@ -112,7 +112,7 @@
         <ol id="detailComments"></ol>
 
 
-        <form action="" method="post" id="commentFrontEnd">
+        <form action="" method="post" id="commentFrontEnd" style='display: none'>
           <input
             type="text"
             name="comment"
@@ -123,7 +123,7 @@
           <input type="submit" value="Add comment" />
         </form>
 
-        <form id="deleteOneFrontEnd">
+        <form id="deleteOneFrontEnd" style='display: none'>
         <input type="submit" value="Delete Book" />
         </form>
 
