--- a/views/index.html
+++ b/views/index.html
@@ -130,7 +130,12 @@
         
       </div>
 
-      <button id="deleteAllBooks">Delete all books...</button>
+
+      
+      <button id="deleteAllBooks" >Delete all books...</button>
+      <p id="deleteAllDisplay"></p>
+      
+      
     </div>
     
     <script type="text/javascript" src="../public/myClient.js"></script>
