tests working again, frontEnd changed

--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,12 @@
   </head>
   <body>
     <header>
-      <h1><b>ISQA Project</b> - Personal Library</h1>
+      <h1 style="text-align: center">
+        Personal Library
+      </h1>
+      <h3 style="color: darkgray; text-align: center">
+        FreeCodeCamp Apis And Microservices Project 03
+      </h3>
     </header>
     <br />
     <div id="userstories">
@@ -62,7 +67,11 @@
           in the database. Returned will be 'complete delete successful' if
           successful.
         </li>
-        <li>All 6 functional tests required are complete and passing.</li>
+        <li>All 6 functional tests required are completed and passing (3 tests will be broken when 'delete all books' button is pressed! 
+          In this case: add a book to the data base, update id and title in /test/func_tests.js).</li>
+        <li>
+          (To run tests: install mocha globally, type 'mocha' in the terminal).
+        </li>
       </ol>
       <br />
       <img
